--- a/tcmc/css/style.css
+++ b/tcmc/css/style.css
@@ -257,16 +257,141 @@ img {
     color: #FFF;
 }
 
-/*------------------------------ Footer ------------------------------*/
-.site-footer {
-    position: relative;
+/* ---- Artist ------ */
+    /* Artist Intro */
+    
 
+    /* Artist List */
+    .artist-list li {
+        list-style: none;
+    }
+
+    .artist-image {
+        width: 180px;
+        height: 180px;
+        float: left;
+        border: solid 5px darkgray;
+        margin-right: 3em;
+    }
+
+    .artist-info {
+        
+    }
+
+    .artist-info-name {
+        margin-bottom: 0;
+    }
+
+    .artist-info-bio {
+        margin-bottom: 0.5em;
+    }
+
+    .artist-container {
+        height: 180px;
+        min-width: 600px;
+        margin-bottom: 2em;
+        margin-top: 2em;
+    }
+
+
+/* --- Artist Detailed --- */
+.artistdetailed-image {
+    width: auto;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3em;
+    margin-bottom: 1em;
 }
-.site-footer .container {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    background: rgba(0, 0, 0, .95);
+
+.artistdetailed-image img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: solid 5px #FFF;
 }
+
+
+
+
+/*------------------------------ Footer ------------------------------*/
+
+.footer-wrapper {
+    clear: both;
+    background-color: black;
+    min-width: 600px;
+}
+
+.site-footer {
+    padding: 2em;
+    padding-bottom: 4em;
+    in-width: 600px;
+}
+
+.site-footer, .site-footer a {
+    color: #FFF;
+}
+
+    /* footer-logo */
+    .footer-logo {
+        margin-left: auto;
+        margin-right: auto;
+        width: 147px;
+        padding-bottom: 1em;
+    }
+    
+
+    /* footer-navigation */
+    .footer-navigation {
+        text-align: center;
+    }
+
+    .footer-navigation li{
+        display: inline-block;
+    }
+
+    .footer-navigation a {
+        text-decoration: none;
+        padding-left: 0.25em;
+        padding-right: 0.25em;
+    }
+
+    .footer-navigation a:hover {
+        color: #077cc1;
+    }
+
+    .footer-navigation li:after {
+        content: " | ";
+    }
+
+    .footer-navigation li:last-child:after {
+        content: " ";
+    }
+
+    /* footer-contact */
+    .footer-contact {
+        text-align: center;
+        font-size: 0.85em;
+    }
+
+    .footer-contact li {
+        list-style: none;
+        padding: 0.2em;
+    }
+
+    .footer-contact-email a:hover {
+        color: #077cc1;
+    }
+
+    .footer-facebook a {
+        float: right;
+        opacity: 0.8;
+    }
+
+    .footer-facebook a:hover {
+        opacity: 1;
+        box-shadow: 0px 0px 25px #077cc1;
+    }
 
 /*------------------------------- Slider -----------------------------*/
 /* Button */
