--- a/tcmc/css/style.css
+++ b/tcmc/css/style.css
@@ -33,7 +33,7 @@
 	width: 400px;
 	position: relative;
     z-index: -1;
-	margin: 10% auto;
+	margin: 4% auto;
 	padding: 5px 20px 13px 20px;
 
 	background: #333;
@@ -79,9 +79,9 @@ body {
 }
 
 *, *:before, *:after {
-    -webkit-box-sizing: border-box;
+   /* -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
-            box-sizing: border-box;
+            box-sizing: border-box;*/
 }
 textarea {
     overflow: auto;
@@ -466,7 +466,7 @@ img {
     }
 
     .about-history-table th, td {
-        padding-bottom: 2em;
+        
     }
 
 
