--- a/tcmc2/css/style.css
+++ b/tcmc2/css/style.css
@@ -1,12 +1,6 @@
 @charset "UTF-8";
 
-
-
-
-
-
-
-
+/*------------------------------ Modal dialog ------------------------------*/
 
 .modalDialog {
 	position: fixed;
@@ -33,7 +27,7 @@
 	width: 400px;
 	position: relative;
     z-index: -1;
-	margin: 10% auto;
+	margin: 4% auto;
 	padding: 5px 20px 13px 20px;
 
 	background: #333;
@@ -60,10 +54,6 @@
 }
 
 .close:hover { background: #00d9ff; }
-
-
-
-
 
 
 /*------------------------------ Body ------------------------------*/
