--- a/tcmc2/css/style.css
+++ b/tcmc2/css/style.css
@@ -1,6 +1,12 @@
 @charset "UTF-8";
 
-/*------------------------------ Modal dialog ------------------------------*/
+
+
+
+
+
+
+
 
 .modalDialog {
 	position: fixed;
@@ -56,6 +62,10 @@
 .close:hover { background: #00d9ff; }
 
 
+
+
+
+
 /*------------------------------ Body ------------------------------*/
 .site-body {
     position: relative;
@@ -69,9 +79,9 @@ body {
 }
 
 *, *:before, *:after {
-    -webkit-box-sizing: border-box;
+   /* -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
-            box-sizing: border-box;
+            box-sizing: border-box;*/
 }
 textarea {
     overflow: auto;
@@ -173,44 +183,6 @@ img {
     height: auto;
     vertical-align: middle;
     z-index: 1;
-}
-
-b, strong {
-    font-weight: bold;
-}
-
-blockquote {
-    clear: both;
-    margin: 20px 0;
-    margin: 2rem 0;
-}
-blockquote p {
-    font-size: 24px;
-    line-height: 1.5;
-}
-blockquote cite {
-    font-size: 13px;
-    font-style: normal;
-    margin-bottom: 20px;
-}
-
-dfn, cite, em, i {
-    font-style: italic;
-}
-
-figure {
-    margin: 0;
-}
-
-address {
-    margin: 20px 0;
-}
-
-hr {
-    height: 1px;
-    margin-bottom: 20px;
-    border: 0;
-    border-top: 1px solid #EEE;
 }
 
 /*------------------------------ Page Layout -------------------------*/
@@ -494,83 +466,8 @@ hr {
     }
 
     .about-history-table th, td {
-        padding-bottom: 2em;
+        
     }
-
-/* Contact
-------------------------------*/
-.map-contact {
-    margin-bottom: 30px;
-    padding: 20px 20px 20px 20px;
-    color: #FFF;
-    background: #212121;
-}
-.map-contact iframe {
-    margin-bottom: 15px;
-}
-
-#home_icon {
-    background: url(http://openmbta.org/images/map/TrackingDot.png);
-    background-repeat: no-repeat;
-    margin-left: 10px;
-    padding-left: 30px;
-    float: left;
-}
-
-#phone_icon {
-    background: url(http://openmbta.org/images/map/TrackingDot.png) 0 0;
-    background-repeat: no-repeat;
-    margin-left: 10px;
-    padding-left: 30px;
-    float: center;
-}
-
-#mail_icon {
-    background: url(http://openmbta.org/images/map/TrackingDot.png) 0 0;
-    background-repeat: no-repeat;
-    margin-left: 10px;
-    padding-left: 30px;
-    float: center;
-}
-
-/* Contact Form
-------------------------------*/
-form label {
-    font-size: 11px;
-    display: inline-block;
-    margin-right: 5px;
-    margin-bottom: 4px;
-    text-transform: uppercase;
-}
-
-.form-row {
-    margin-bottom: 10px;
-}
-
-#contact_form input[type="text"] {
-    min-width: 250px;
-}
-#contact_form textarea {
-    min-width: 320px;
-    min-height: 150px;
-}
-#contact_form #contact_submit {
-    margin-top: 10px;
-}
-#contact_form .notice.hide, #contact_form .loading.hide {
-    display: none;
-}
-#contact_form .loading {
-    display: inline-block;
-    margin-left: 5px;
-    vertical-align: middle;
-}
-#contact_form .error {
-    border: 1px solid red !important;
-}
-#contact_form .notice_ok {
-    color: green;
-}
 
 /* ---- Events ------ */
 
@@ -610,6 +507,7 @@ form label {
         content: " ";   
     }
 
+
 /*------------------------------ Footer ------------------------------*/
 
 .footer-wrapper {
@@ -635,6 +533,7 @@ form label {
         width: 147px;
         padding-bottom: 1em;
     }
+    
 
     /* footer-navigation */
     .footer-navigation {
@@ -683,7 +582,10 @@ form label {
         opacity: 0.8;
     }
 
-    
+    .footer-facebook a:hover {
+        opacity: 1;
+        box-shadow: 0px 0px 25px #077cc1;
+    }
 
 /*------------------------------- Slider -----------------------------*/
 /* Button */
@@ -699,34 +601,33 @@ form label {
     border-radius: 0;
     background: #7E7E7E;
 }
-<<<<<<< HEAD
-.ui.button:hover {
-    color: #FFF;
-    background: #7E7E7E;
-}
-
-.ui.button:focus {
-    color: #FFF;
-    box-shadow: none;
-=======
 .rs_img {
     z-index: 1;
->>>>>>> origin/master
 }
 
-.ui.button.coloured {
+.ui.button.colored {
     background: #077cc1;
 }
-.ui.button.coloured:hover {
+.ui.button.colored:hover {
     background: #7E7E7E;
 }
 
-.ui.huge.button {
+.ui.button {
     font-size: 15px;
  
     font-weight: bold;
     padding: 15px 30px;
     letter-spacing: 1.2px;
+}
+.ui.small.button {
+    font-size: 12px;
+    font-weight: bold;
+    background: #077cc1;
+    padding: 6px 20px;
+    letter-spacing: 1.3px;
+}
+.ui.small.button:hover {
+    background: #7E7E7E;
 }
 
 /* Slider */
