--- a/tcmc2/css/style.css
+++ b/tcmc2/css/style.css
@@ -66,6 +66,7 @@ body {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+    
 }
 textarea {
 	overflow: auto;
@@ -214,6 +215,7 @@ hr {
 
 .content {
 	padding: 2em 2em 0;
+    padding-bottom: 2em;
 	color: #FFF;
 	background: #212121;
 }
