--- a/tcmc2/css/style.css
+++ b/tcmc2/css/style.css
@@ -840,10 +840,10 @@ form label {
     z-index: 1;
 }
 
-.ui.button.colored {
+.ui.button.coloured {
     background: #077cc1;
 }
-.ui.button.colored:hover {
+.ui.button.coloured:hover {
     background: #7E7E7E;
 }
 
