--- a/tcmc2/css/style.css
+++ b/tcmc2/css/style.css
@@ -6,8 +6,11 @@
 .modalDialog {
 	position: fixed;
 	font-family: Arial, Helvetica, sans-serif;
+
 	top: 0;
 	right: 0;
+    max-height: 100%;
+overflow-y: scroll;
 	bottom: 0;
 	left: 0;
 	background: rgba(0,0,0,0.8);
@@ -23,6 +26,7 @@
 	pointer-events: auto;
 }
 .modalDialog > div {
+    
 	width: 400px;
 	position: relative;
 	z-index: -1;
