--- a/tcmc2/css/style.css
+++ b/tcmc2/css/style.css
@@ -34,6 +34,44 @@ overflow-y: scroll;
 	padding: 5px 20px 13px 20px;
 	background: #333;
 }
+.addArtistDialog::-webkit-scrollbar { 
+    display: none; 
+}
+.addArtistDialog { 
+    -ms-overflow-style: none; 
+}
+.addArtistDialog { -moz-scrollbars-none; }
+.addArtistDialog {
+	position: fixed;
+	font-family: Arial, Helvetica, sans-serif;
+
+	top: 0;
+	right: 0;
+    max-height: 100%;
+overflow-y: scroll;
+	bottom: 0;
+	left: 0;
+	background: rgba(0,0,0,0.8);
+	z-index: 999;
+	opacity: 0;
+	-webkit-transition: opacity 400ms ease-in;
+	-moz-transition: opacity 400ms ease-in;
+	transition: opacity 400ms ease-in;
+	pointer-events: none;
+}
+.addArtistDialog:target {
+	opacity: 1;
+	pointer-events: auto;
+}
+.addArtistDialog > div {
+    
+	width: 700px;
+	position: relative;
+	z-index: -1;
+	margin: 2.5% auto;
+	padding: 5px 20px 13px 20px;
+	background: #333;
+}
 .close {
 	background: #606061;
 	color: #FFFFFF;
@@ -314,6 +352,7 @@ hr {
 }
 
 .content {
+    
 	padding: 2em 2em 0;
     padding-bottom: 2em;
 	color: #FFF;
