Added 'Return to Top' to all pages and edited the about page

--- a/tcmc2/css/style.css
+++ b/tcmc2/css/style.css
@@ -647,6 +647,14 @@ header nav {
 	border: solid 5px #FFF;
 }
 /* -------- About ---------- */
+/* Accordion */
+.ui.accordion, .ui.accordion .accordion {
+    border-radius: 0;
+}
+.ui.accordion .accordion .title, .ui.accordion .title {
+    padding: .8em 0;
+    color: #FFF;
+}
 .about-content {
 	margin-top: 4em;
 }
@@ -729,6 +737,12 @@ header nav {
 }
 .map-contact iframe {
 	margin-bottom: 15px;
+}
+#accordion_icon {
+	background: url(../images/icons/accordion.png);
+	background-repeat: no-repeat;
+	margin-left: 10px;
+	padding-left: 30px;
 }
 #home_icon {
 	background: url(../images/icons/house.png);
