--- a/tcmc2/css/style.css
+++ b/tcmc2/css/style.css
@@ -6,10 +6,11 @@
 .modalDialog {
 	position: fixed;
 	font-family: Arial, Helvetica, sans-serif;
+
 	top: 0;
 	right: 0;
     max-height: 100%;
-	overflow-y: scroll;
+overflow-y: scroll;
 	bottom: 0;
 	left: 0;
 	background: rgba(0,0,0,0.8);
@@ -407,7 +408,7 @@ header nav {
 
 .site-navigation {
 	position: relative;
-	z-index: 100;
+	z-index: 1;
 	/*
 	float: right !important;
 	max-width: 80%; */
@@ -982,7 +983,7 @@ width: 20em;
     bottom: 200px;
 }
 .rsVideo .bContainer span {
-    background: #077cc1;
+    background: red;
 }
 
 .bContainer {
@@ -1021,6 +1022,7 @@ width: 20em;
         font-size: 40px;
     }
 }
+
 /* Button Position */
 .rsMinW .rsArrowRight {
     top: 50%;
@@ -1040,6 +1042,72 @@ width: 20em;
 
 .rsMinW .rsBullets {
     right: 50%;
+}
+/* Video Slider
+------------------------------*/
+.video_slider .widget-content {
+    border: 8px solid #212121;
+    -webkit-border-radius: 3px;
+       -moz-border-radius: 3px;
+            border-radius: 3px;
+}
+/* RoyalSlider: Videos
+------------------------------*/
+.rsVideos {
+    margin-bottom: 30px;
+    padding: 7px;
+    -webkit-border-radius: 3px;
+       -moz-border-radius: 3px;
+            border-radius: 3px;
+    background: #222;
+}
+
+.video_wrapper {
+    margin-bottom: 30px;
+    padding: 7px 7px 0 7px;
+    -webkit-border-radius: 3px;
+       -moz-border-radius: 3px;
+            border-radius: 3px;
+    background: #222;
+}
+
+.video_lightbox {
+    position: relative;
+    margin-bottom: 30px;
+    padding: 7px 7px 7px 7px;
+    -webkit-border-radius: 3px;
+       -moz-border-radius: 3px;
+            border-radius: 3px;
+    background: #222;
+}
+
+.video_lightbox:hover img {
+    opacity: .5;
+}
+
+.video_button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin-top: -33px;
+    margin-left: -33px;
+    border: 2px solid #CCC;
+    -webkit-border-radius: 100px;
+       -moz-border-radius: 100px;
+            border-radius: 100px;
+    background: url("assets/images/rs-default.png") no-repeat scroll 0 -34px rgba(0, 0, 0, .75);
+}
+
+/* RoyalSlider: Gallery Slideshow
+------------------------------*/
+#gallery-slideshow {
+    width: 100%;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+            user-select: none;
 }
 /* Button */
 .ui.button {
@@ -1067,6 +1135,7 @@ width: 20em;
 
 .ui.button {
     font-size: 15px;
+ 
     font-weight: bold;
     padding: 15px 30px;
     letter-spacing: 1.2px;
@@ -1084,6 +1153,8 @@ width: 20em;
 
 /* Slider */
 .rsContent {
+    z-index: 1;
+ 
     float: left;
     color: #FFF;
 }
@@ -1093,6 +1164,7 @@ width: 20em;
     bottom: 240px;
     left: auto;
     display: block;
+    z-index: 1;
     text-align: center;
 }
 
