--- a/tcmc2/css/style.css
+++ b/tcmc2/css/style.css
@@ -13,7 +13,7 @@
 overflow-y: scroll;
 	bottom: 0;
 	left: 0;
-	background: rgba(0,0,0,0.8);
+	background-color: rgba(0,0,0,0.8);
 	z-index: 999;
 	opacity: 0;
 	-webkit-transition: opacity 400ms ease-in;
@@ -49,7 +49,7 @@ overflow-y: scroll;
     overflow-y: scroll;
 	bottom: 0;
 	left: 0;
-	background: rgba(0,0,0,0.8);
+	background-color: rgba(0,0,0,0.8);
 	z-index: 999;
 	opacity: 0;
 	-webkit-transition: opacity 400ms ease-in;
@@ -214,7 +214,7 @@ body {
     }
 
     .bulletin-details-list li {
-        float: left
+        float: left;
         list-style: none;
         display: inline-block;
         padding-right: 3em;
@@ -315,7 +315,6 @@ b, strong {
 blockquote {
 	clear: both;
 	margin: 20px 0;
-	margin: 2rem 0;
 }
 blockquote p {
 	font-size: 24px;
@@ -1015,7 +1014,7 @@ width: 20em;
     padding: 5px 30px;
     letter-spacing: 3px;
     text-transform: uppercase;
-    background: rgba(0, 0, 0, .7);
+    background-color: rgba(0, 0, 0, .7);
 }
 @media screen and (min-width: 790px) {
     .rs_text_box span {
@@ -1157,6 +1156,8 @@ width: 20em;
  
     float: left;
     color: #FFF;
+    max-width: 100%;
+	max-height: 500px;
 }
 
 .bContainer {
