--- a/tcmc2/css/style.css
+++ b/tcmc2/css/style.css
@@ -681,6 +681,9 @@ header nav {
 .about-contact-email a:hover {
 	color: #077cc1;
 }
+.about-link a{
+	color: #fff;
+}
 .about-link a:hover {
 	color: #077cc1;
 }
