--- a/tcmc2/css/style.css
+++ b/tcmc2/css/style.css
@@ -188,7 +188,7 @@ body {
         list-style: none;
     }
 
-    .bulletin-image {
+    .artist-image {
     	clear: both;
         width: 180px;
         height: 180px;
