--- a/tcmc2/css/rs-default.css
+++ b/tcmc2/css/rs-default.css
@@ -19,16 +19,10 @@
 
 
 /* Background */
-.rsDefault,
-.rsDefault .rsOverflow,
-.rsDefault .rsSlide,
-.rsDefault .rsVideoFrameHolder,
-.rsDefault .rsThumbs {
+.rsDefault, .rsDefault .rsOverflow, .rsDefault .rsSlide, .rsDefault .rsVideoFrameHolder, .rsDefault .rsThumbs {
 	background: #222222;
 	color: #FFF;
 }
-
-
 /***************
 *
 *  1. Arrows
@@ -46,45 +40,58 @@
 .rsDefault.rsVer .rsArrow {
 	width: 100%;
 	height: 44px;
-	
 }
-.rsDefault.rsVer .rsArrowLeft { top: 0; left: 0; }
-.rsDefault.rsVer .rsArrowRight { bottom: 0;  left: 0; }
-
-.rsDefault.rsHor .rsArrowLeft { left: 0; top: 0; }
-.rsDefault.rsHor .rsArrowRight { right: 0; top:0; }
-
-.rsDefault .rsArrowIcn {		
+.rsDefault.rsVer .rsArrowLeft {
+	top: 0;
+	left: 0;
+}
+.rsDefault.rsVer .rsArrowRight {
+	bottom: 0;
+	left: 0;
+}
+.rsDefault.rsHor .rsArrowLeft {
+	left: 0;
+	top: 0;
+}
+.rsDefault.rsHor .rsArrowRight {
+	right: 0;
+	top: 0;
+}
+.rsDefault .rsArrowIcn {
 	width: 32px;
 	height: 32px;
 	top: 50%;
 	left: 50%;
-	margin-top:-16px;	
+	margin-top: -16px;
 	margin-left: -16px;
-
-	position: absolute;	
-	cursor: pointer;	
+	position: absolute;
+	cursor: pointer;
 	background: url('../images/rs-default.png');
-
 	background-color: #000;
 	background-color: rgba(0,0,0,0.75);
-	*background-color: #000;
-	
+ *background-color: #000;
 	border-radius: 2px;
 }
 .rsDefault .rsArrowIcn:hover {
 	background-color: rgba(0,0,0,0.9);
 }
-
-.rsDefault.rsHor .rsArrowLeft .rsArrowIcn { background-position: -64px -32px; }
-.rsDefault.rsHor .rsArrowRight .rsArrowIcn { background-position: -64px -64px; }
-
-.rsDefault.rsVer .rsArrowLeft .rsArrowIcn { background-position: -96px -32px; }
-.rsDefault.rsVer .rsArrowRight .rsArrowIcn { background-position: -96px -64px; }
-
-.rsDefault .rsArrowDisabled .rsArrowIcn { opacity: .2; filter: alpha(opacity=20);  *display: none; }
-
-
+.rsDefault.rsHor .rsArrowLeft .rsArrowIcn {
+	background-position: -64px -32px;
+}
+.rsDefault.rsHor .rsArrowRight .rsArrowIcn {
+	background-position: -64px -64px;
+}
+.rsDefault.rsVer .rsArrowLeft .rsArrowIcn {
+	background-position: -96px -32px;
+}
+.rsDefault.rsVer .rsArrowRight .rsArrowIcn {
+	background-position: -96px -64px;
+}
+.rsDefault .rsArrowDisabled .rsArrowIcn {
+	opacity: .2;
+	filter: alpha(opacity=20);
+*display: none;
+}
 /***************
 *
 *  2. Bullets
@@ -98,11 +105,9 @@
 	bottom: 0;
 	width: 100%;
 	height: auto;
-	margin: 0 auto; 
-
+	margin: 0 auto;
 	background: #000;
 	background: rgba(0,0,0,0.75);
-
 	text-align: center;
 	line-height: 8px;
 	overflow: hidden;
@@ -111,8 +116,8 @@
 	width: 8px;
 	height: 8px;
 	display: inline-block;
-	*display:inline; 
-	*zoom:1;
+ *display:inline;
+ *zoom:1;
 	padding: 6px 5px 6px;
 }
 .rsDefault .rsBullet span {
@@ -126,11 +131,6 @@
 .rsDefault .rsBullet.rsNavSelected span {
 	background-color: #FFF;
 }
-
-
-
-
-
 /***************
 *
 *  3. Thumbnails
@@ -176,7 +176,6 @@
 .rsDefault .rsTmb {
 	display: block;
 }
-
 /* Thumbnails with text */
 .rsDefault .rsTmb h5 {
 	font-size: 16px;
@@ -192,17 +191,14 @@
 	font-size: 13px;
 	line-height: 18px;
 }
-
-
-
 /* Thumbnails arrow icons */
 .rsDefault .rsThumbsArrow {
 	height: 100%;
 	width: 20px;
 	position: absolute;
 	display: block;
-	cursor: pointer;	
-	z-index: 21;	
+	cursor: pointer;
+	z-index: 21;
 	background: #000;
 	background: rgba(0,0,0,0.75);
 }
@@ -213,49 +209,62 @@
 	width: 100%;
 	height: 20px;
 }
-.rsDefault.rsWithThumbsVer .rsThumbsArrowLeft { top: 0; left: 0; }
-.rsDefault.rsWithThumbsVer .rsThumbsArrowRight { bottom: 0;  left: 0; }
-
-.rsDefault.rsWithThumbsHor .rsThumbsArrowLeft { left: 0; top: 0; }
-.rsDefault.rsWithThumbsHor .rsThumbsArrowRight { right: 0; top:0; }
-
-.rsDefault .rsThumbsArrowIcn {		
+.rsDefault.rsWithThumbsVer .rsThumbsArrowLeft {
+	top: 0;
+	left: 0;
+}
+.rsDefault.rsWithThumbsVer .rsThumbsArrowRight {
+	bottom: 0;
+	left: 0;
+}
+.rsDefault.rsWithThumbsHor .rsThumbsArrowLeft {
+	left: 0;
+	top: 0;
+}
+.rsDefault.rsWithThumbsHor .rsThumbsArrowRight {
+	right: 0;
+	top: 0;
+}
+.rsDefault .rsThumbsArrowIcn {
 	width: 16px;
 	height: 16px;
 	top: 50%;
 	left: 50%;
-	margin-top:-8px;	
+	margin-top: -8px;
 	margin-left: -8px;
-	position: absolute;	
-	cursor: pointer;	
+	position: absolute;
+	cursor: pointer;
 	background: url('../images/rs-default.png');
 }
-
-.rsDefault.rsWithThumbsHor .rsThumbsArrowLeft .rsThumbsArrowIcn { background-position: -128px -32px; }
-.rsDefault.rsWithThumbsHor .rsThumbsArrowRight .rsThumbsArrowIcn { background-position: -128px -48px; }
-
-.rsDefault.rsWithThumbsVer .rsThumbsArrowLeft .rsThumbsArrowIcn { background-position: -144px -32px; }
-.rsDefault.rsWithThumbsVer .rsThumbsArrowRight .rsThumbsArrowIcn { background-position: -144px -48px; }
-
-.rsDefault .rsThumbsArrowDisabled { display: none !important; }
+.rsDefault.rsWithThumbsHor .rsThumbsArrowLeft .rsThumbsArrowIcn {
+	background-position: -128px -32px;
+}
+.rsDefault.rsWithThumbsHor .rsThumbsArrowRight .rsThumbsArrowIcn {
+	background-position: -128px -48px;
+}
+.rsDefault.rsWithThumbsVer .rsThumbsArrowLeft .rsThumbsArrowIcn {
+	background-position: -144px -32px;
+}
+.rsDefault.rsWithThumbsVer .rsThumbsArrowRight .rsThumbsArrowIcn {
+	background-position: -144px -48px;
+}
+.rsDefault .rsThumbsArrowDisabled {
+	display: none !important;
+}
 
 /* Thumbnails resizing on smaller screens */
 @media screen and (min-width: 0px) and (max-width: 800px) {
-	.rsDefault .rsThumb {
-		width: 59px;
-		height: 44px;
-	}
-	.rsDefault .rsThumbsHor {
-		height: 44px;
-	}
-	.rsDefault .rsThumbsVer {
-		width: 59px;
-	}
+.rsDefault .rsThumb {
+	width: 59px;
+	height: 44px;
 }
-
-
-
-
+.rsDefault .rsThumbsHor {
+	height: 44px;
+}
+.rsDefault .rsThumbsVer {
+	width: 59px;
+}
+}
 /***************
 *
 *  4. Tabs
@@ -266,8 +275,10 @@
 	width: 100%;
 	height: auto;
 	margin: 0 auto;
-	text-align:center;
-	overflow: hidden; padding-top: 12px; position: relative;
+	text-align: center;
+	overflow: hidden;
+	padding-top: 12px;
+	position: relative;
 }
 .rsDefault .rsTab {
 	display: inline-block;
@@ -281,17 +292,14 @@
 	border: 1px solid #D9D9DD;
 	border-right: 1px solid #f5f5f5;
 	text-decoration: none;
-
 	background-color: #FFF;
-	background-image: -webkit-linear-gradient(top, #fefefe, #f4f4f4); 
-	background-image:    -moz-linear-gradient(top, #fefefe, #f4f4f4);
-	background-image:         linear-gradient(to bottom, #fefefe, #f4f4f4);
-
+	background-image: -webkit-linear-gradient(top, #fefefe, #f4f4f4);
+	background-image: -moz-linear-gradient(top, #fefefe, #f4f4f4);
+	background-image: linear-gradient(to bottom, #fefefe, #f4f4f4);
 	-webkit-box-shadow: inset 1px 0 0 #fff;
 	box-shadow: inset 1px 0 0 #fff;
-
-	*display:inline; 
-	*zoom:1;
+ *display:inline;
+ *zoom:1;
 }
 .rsDefault .rsTab:first-child {
 	-webkit-border-top-left-radius: 4px;
@@ -299,20 +307,19 @@
 	-webkit-border-bottom-left-radius: 4px;
 	border-bottom-left-radius: 4px;
 }
-.rsDefault .rsTab:last-child { 
+.rsDefault .rsTab:last-child {
 	-webkit-border-top-right-radius: 4px;
 	border-top-right-radius: 4px;
 	-webkit-border-bottom-right-radius: 4px;
 	border-bottom-right-radius: 4px;
-
-	border-right:  1px solid #cfcfcf;
+	border-right: 1px solid #cfcfcf;
 }
-.rsDefault .rsTab:active { 
-	border: 1px solid #D9D9DD;   
+.rsDefault .rsTab:active {
+	border: 1px solid #D9D9DD;
 	background-color: #f4f4f4;
-	box-shadow:  0 1px 4px rgba(0, 0, 0, 0.2) inset;
+	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2) inset;
 }
-.rsDefault .rsTab.rsNavSelected { 
+.rsDefault .rsTab.rsNavSelected {
 	color: #FFF;
 	border: 1px solid #999;
 	text-shadow: 1px 1px #838383;
@@ -322,11 +329,6 @@
 	background-image: -moz-llinear-gradient(top, #ACACAC, #BBB);
 	background-image: linear-gradient(to bottom, #ACACAC, #BBB);
 }
-
-
-
-
-
 /***************
 *
 *  5. Fullscreen button
@@ -342,20 +344,17 @@
 	display: block;
 	position: absolute;
 	cursor: pointer;
-	
 }
 .rsDefault .rsFullscreenIcn {
 	display: block;
 	margin: 6px;
 	width: 32px;
 	height: 32px;
-
 	background: url('../images/rs-default.png') 0 0;
 	background-color: #000;
 	background-color: rgba(0,0,0,0.75);
-	*background-color: #000;
+ *background-color: #000;
 	border-radius: 2px;
-
 }
 .rsDefault .rsFullscreenIcn:hover {
 	background-color: rgba(0,0,0,0.9);
@@ -363,11 +362,6 @@
 .rsDefault.rsFullscreen .rsFullscreenIcn {
 	background-position: -32px 0;
 }
-
-
-
-
-
 /***************
 *
 *  6. Play/close video button
@@ -375,36 +369,34 @@
 ****************/
 
 .rsDefault .rsPlayBtn {
-	-webkit-tap-highlight-color:rgba(0,0,0,0.3);
-	width:64px;
-	height:64px;
-	margin-left:-32px;
-	margin-top:-32px;
+	-webkit-tap-highlight-color: rgba(0,0,0,0.3);
+	width: 64px;
+	height: 64px;
+	margin-left: -32px;
+	margin-top: -32px;
 	cursor: pointer;
 }
 .rsDefault .rsPlayBtnIcon {
-	width:64px;
-	display:block;
-	height:64px;
+	width: 64px;
+	display: block;
+	height: 64px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
-	
 	-webkit-transition: .3s;
 	-moz-transition: .3s;
 	transition: .3s;
-
-	background:url(../images/rs-default.png) no-repeat 0 -32px;
+	background: url(../images/rs-default.png) no-repeat 0 -32px;
 	background-color: #000;
 	background-color: rgba(0,0,0,0.75);
-	*background-color: #000;
+ *background-color: #000;
 }
 .rsDefault .rsPlayBtn:hover .rsPlayBtnIcon {
 	background-color: rgba(0,0,0,0.9);
 }
 .rsDefault .rsBtnCenterer {
-	position:absolute;
-	left:50%;
-	top:50%;
+	position: absolute;
+	left: 50%;
+	top: 50%;
 }
 .rsDefault .rsCloseVideoBtn {
 	right: 0;
@@ -416,13 +408,11 @@
 	cursor: pointer;
 	-webkit-backface-visibility: hidden;
 	-webkit-transform: translateZ(0);
-	
 }
 .rsDefault .rsCloseVideoBtn.rsiOSBtn {
 	top: -38px;
 	right: -6px;
 }
-
 .rsDefault .rsCloseVideoIcn {
 	margin: 6px;
 	width: 32px;
@@ -430,14 +420,11 @@
 	background: url('../images/rs-default.png') -64px 0;
 	background-color: #000;
 	background-color: rgba(0,0,0,0.75);
-	*background-color: #000;
+ *background-color: #000;
 }
 .rsDefault .rsCloseVideoIcn:hover {
 	background-color: rgba(0,0,0,0.9);
 }
-
-
-
 /***************
 *
 *  7. Preloader
@@ -445,19 +432,14 @@
 ****************/
 
 .rsDefault .rsPreloader {
-	width:20px;
-	height:20px;
-	background-image:url(../images/preloader-white.gif);
-
-	left:50%;
-	top:50%;
-	margin-left:-10px;
-	margin-top:-10px;	
+	width: 20px;
+	height: 20px;
+	background-image: url(../images/preloader-white.gif);
+	left: 50%;
+	top: 50%;
+	margin-left: -10px;
+	margin-top: -10px;
 }
-
-
-
-
 /***************
 *
 *  8. Global caption
@@ -469,18 +451,14 @@
 	bottom: 6px;
 	left: 6px;
 	text-align: left;
-
 	background: rgb(0, 0, 0);
-    background: rgba(0, 0, 0, 0.75);
-
+	background: rgba(0, 0, 0, 0.75);
 	color: #FFF;
 	padding: 2px 8px;
 	width: auto;
 	font-size: 12px;
 	border-radius: 2px;
 }
-
-
 /***************
 *
 *  Video Gallery
@@ -488,61 +466,57 @@
 ****************/
 
 #video-gallery {
-  width: 100%;
+	width: 100%;
 }
-
 .videoGallery .rsTmb {
-  padding: 20px;
+	padding: 20px;
 }
 .videoGallery .rsThumbs .rsThumb {
-  width: 220px;
-  height: 80px;
-  border-bottom: 1px solid #2E2E2E;
+	width: 220px;
+	height: 80px;
+	border-bottom: 1px solid #2E2E2E;
 }
 .videoGallery .rsThumbs {
-  width: 220px;
-  padding: 0;
+	width: 220px;
+	padding: 0;
 }
 .videoGallery .rsThumb:hover {
-  background: #000;
+	background: #000;
 }
 .videoGallery .rsThumb.rsNavSelected {
-  background-color: #ff0000;
-  border-bottom:-color #fff;
+	background-color: #ff0000;
+	border-bottom: -color #fff;
 }
-
 .sampleBlock {
-  left: 3%; 
-  top: 1%; 
-  width: 100%;
-  max-width: 400px;
+	left: 3%;
+	top: 1%;
+	width: 100%;
+	max-width: 400px;
 }
-
 
 @media screen and (min-width: 0px) and (max-width: 500px) {
-  .videoGallery .rsTmb {
-    padding: 6px 8px;
-  }
-  .videoGallery .rsTmb h5 {
-    font-size: 12px;
-    line-height: 17px;
-  }
-  .videoGallery .rsThumbs.rsThumbsVer {
-    width: 100px;
-    padding: 0;
-  }
-  .videoGallery .rsThumbs .rsThumb {
-    width: 100px;
-    height: 47px;
-  }
-  .videoGallery .rsTmb span {
-    display: none;
-  }
-  .videoGallery .rsOverflow,
-  .royalSlider.videoGallery {
-    height: 300px !important;
-  }
-  .sampleBlock {
-    font-size: 14px;
-  }
+.videoGallery .rsTmb {
+	padding: 6px 8px;
+}
+.videoGallery .rsTmb h5 {
+	font-size: 12px;
+	line-height: 17px;
+}
+.videoGallery .rsThumbs.rsThumbsVer {
+	width: 100px;
+	padding: 0;
+}
+.videoGallery .rsThumbs .rsThumb {
+	width: 100px;
+	height: 47px;
+}
+.videoGallery .rsTmb span {
+	display: none;
+}
+.videoGallery .rsOverflow,  .royalSlider.videoGallery {
+	height: 300px !important;
+}
+.sampleBlock {
+	font-size: 14px;
+}
 }
