--- a/tcmc2/css/smk-accordion.less
+++ b/tcmc2/css/smk-accordion.less
@@ -1,13 +1,13 @@
 @accordion_container: .smk_accordion;
 @accordion_section: .accordion_in;
-
-//Full accordion
-@{accordion_container}{
-	position: relative;
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	margin-bottom: 20px;
+ //Full accordion @ {
+accordion_container
+} {
+ position: relative;
+ margin: 0;
+ padding: 0;
+ list-style: none;
+ margin-bottom: 20px;
 }
 
 /**
@@ -15,14 +15,18 @@
  * Section
  * --------------------------------------------------------------
  */
-@{accordion_container}{
-	@{accordion_section}{ 
-		border: 1px solid #212121;
-		position: relative;
-		z-index: 10;
-		margin-top: -1px;
-		overflow: hidden;
-	}
+@ {
+accordion_container
+} {
+ @ {
+accordion_section
+} {
+ border: 1px solid #212121;
+ position: relative;
+ z-index: 10;
+ margin-top: -1px;
+ overflow: hidden;
+}
 }
 
 /**
@@ -30,29 +34,31 @@
  * Head
  * --------------------------------------------------------------
  */
-@{accordion_container}{
-	@{accordion_section}{ 
-		//Head
-		.acc_head{
-			position: relative;
-			background: #212121;
-			padding: 10px;
-			font-size: 14px;
-			display: block;
-			cursor: pointer; 
-			//Icon
-			.acc_icon_expand{
-				display: block;
-				width: 18px;
-				height: 18px;
-				position: absolute;
-				left: 10px;
-				top: 50%;
-				margin-top: -9px;
-				background: url(../images/plusminus.png) center 0;
-			}
-		}
-	}
+@ {
+accordion_container
+} {
+ @ {
+accordion_section
+} {
+ //Head  .acc_head {
+ position: relative;
+ background: #212121;
+ padding: 10px;
+ font-size: 14px;
+ display: block;
+ cursor: pointer;
+ //Icon  .acc_icon_expand {
+ display: block;
+ width: 18px;
+ height: 18px;
+ position: absolute;
+ left: 10px;
+ top: 50%;
+ margin-top: -9px;
+ background: url(../images/plusminus.png) center 0;
+}
+}
+}
 }
 
 /**
@@ -60,20 +66,23 @@
  * Content
  * --------------------------------------------------------------
  */
-@{accordion_container}{
-	@{accordion_section}{ 
-		//Content
-		.acc_content{
-			background: #212121;
-			color: #f1ffff;
-			padding: 3px 10px;
-			h1, h2, h3, h4, h5, h6{
-				&:first-of-type{
-					margin-top: 5px;
-				}
-			}
-		}
-	}
+@ {
+accordion_container
+} {
+ @ {
+accordion_section
+} {
+ //Content  .acc_content {
+ background: #212121;
+ color: #f1ffff;
+ padding: 3px 10px;
+ h1, h2, h3, h4, h5, h6 {
+ &:first-of-type {
+ margin-top: 5px;
+}
+}
+}
+}
 }
 
 /**
@@ -81,35 +90,33 @@
  * General
  * --------------------------------------------------------------
  */
-@{accordion_container}{
-	@{accordion_section}{ 
-		// Border radius
-		&:first-of-type,
-		&:first-of-type .acc_head{
-			border-radius: 3px 3px 0 0;
-		}
-		&:last-of-type,
-		&:last-of-type .acc_content{
-			border-radius: 0 0 3px 3px;
-		}
-
-		//JS Requirements
-		&.acc_active{
-			> .acc_content{ 
-				display: block;
-			}
-			> .acc_head{
-				background: #077cc1;
-				.acc_icon_expand{
-					background: url(../images/plusminus.png) center -18px;
-				}
-			}
-		}
-	}
-	&.acc_with_icon{
-		.accordion_in .acc_head,
-		.accordion_in .acc_content{
-			padding-left: 40px;
-		}
-	}
+@ {
+accordion_container
+} {
+ @ {
+accordion_section
+} {
+ // Border radius  &:first-of-type,  &:first-of-type .acc_head {
+ border-radius: 3px 3px 0 0;
+}
+ &:last-of-type,  &:last-of-type .acc_content {
+ border-radius: 0 0 3px 3px;
+}
+ //JS Requirements  &.acc_active {
+ > .acc_content {
+ display: block;
+}
+ > .acc_head {
+ background: #077cc1;
+ .acc_icon_expand {
+ background: url(../images/plusminus.png) center -18px;
+}
+}
+}
+}
+ &.acc_with_icon {
+ .accordion_in .acc_head,  .accordion_in .acc_content {
+ padding-left: 40px;
+}
+}
 }
